kube_folder/todoser001.yml
apiVersion: v1
kind: Service
metadata:
  name: tododep001
spec:
  type: ClusterIP
  ports:
    - port: 8000           # 서비스 자체 포트 (Ingress가 여기로 보냄)
      targetPort: 8080     #  실제 포트 8080
  selector:
    app: tododep001        # [수정] Deployment의 labels와 일치시킴 (todo001ser -> tododep001)
